feat: news section implemented

--- a/src/app/components/suggested/suggested.component.html
+++ b/src/app/components/suggested/suggested.component.html
@@ -1,1 +1,6 @@
-<p>suggested works!</p>
+<div class="suggested__search">
+    <img src="assets/images/svg/search-icon.svg" alt="search-icon">
+    <input type="text" placeholder="Search">
+</div>
+<app-suggested-news></app-suggested-news>
+<app-suggested-follow></app-suggested-follow>
