--- a/src/assets/scss/_extend-classes.scss
+++ b/src/assets/scss/_extend-classes.scss
@@ -22,3 +22,26 @@
     }
 }
 
+.suggested-section {
+    width: 80%;
+    padding: 1rem 0;
+    border-radius: 1.25rem;
+    background-color: $gray-background;
+    display: flex;
+    flex-direction: column;
+    margin-top: 1.25rem;
+    color: $white;
+}
+
+.suggested-section-item {
+    display: flex;
+    padding: 1rem;
+    box-sizing: border-box;
+    line-height: 1.25rem;
+    font-size: 0.938rem;
+
+    &:hover {
+        cursor: pointer;
+        background-color: $gray-background;
+    }
+}
