--- a/src/app/components/suggested/suggested.component.scss
+++ b/src/app/components/suggested/suggested.component.scss
@@ -1,7 +1,41 @@
+@import 'src/assets/scss';
+
 :host {
     width: 30%;
     padding: 0.5rem 1.25rem;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+}
+
+.suggested {
+    &__search {
+        width: 80%;
+        height: 3rem;
+        border-radius: 624.938rem;
+        padding: 1rem;
+        background-color: $gray-background;
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+
+        input {
+            height: 100%;
+            background-color: transparent;
+            color: $white;
+            font-size: 1rem;
+            border: none;
+            outline: none;
+
+            &::placeholder {
+                color: $gray-font;
+            }
+        }
+
+        img {
+            width: 1.25rem;
+            height: 1.25rem;
+            margin-right: 1rem;
+        }
+    }
 }
