feat: news header implemented

--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,1 +1,3 @@
-<p>news works!</p>
+<app-news-home></app-news-home>
+<app-news-post-creation></app-news-post-creation>
+<app-news-post-list></app-news-post-list>
