feat: news section list implemented
Francisco Zambrano

--- a/src/app/components/news/news-post-creation/news-post-creation.component.scss
+++ b/src/app/components/news/news-post-creation/news-post-creation.component.scss
@@ -80,11 +80,15 @@
                 }
             }
 
-            create-post {
+            .create-post {
                 @extend .create-x-button;
                 width: 75px;
                 height: 2.125rem;
                 font-size: 1rem;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
     }
