--- a/src/app/components/news/news-post-list/news-post-list.component.html
+++ b/src/app/components/news/news-post-list/news-post-list.component.html
@@ -1,1 +1,6 @@
-<p>news-post-list works!</p>
+<section class="news-post-list__theme">
+    <span>Show 455 posts</span>
+</section>
+<section id="news-post-list__content-id">
+    <app-x-post *ngFor="let post of xPostList$ | async" [post]="post"></app-x-post>
+</section>
